# HomeNetMonitor

./: .gitignore  .pre-commit-config.yaml  INSTALLATION_TESTED.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: anomaly_detector.py  app.py  database.py  monitor.py  network_scanner.py  traffic_monitor.py
templates/: dashboard.html
