[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HomeNetMonitor"
version = "1.0.0"
description = "Real-time home network monitoring dashboard with anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Christian Torchia", email = "your-email@example.com"}
]
keywords = ["network-monitoring", "home-network", "security", "flask", "dashboard"]

dependencies = [
    "flask==3.0.0",
    "scapy==2.5.0",
    "python-nmap==0.7.1",
    "psutil==5.9.6",
]

[project.urls]
Homepage = "https://github.com/torchiachristian/HomeNetMonitor"
Repository = "https://github.com/torchiachristian/HomeNetMonitor"

[tool.setuptools]
packages = ["src"]
